# wecanencrypt

./: Cargo.toml  README.md
examples/: bench_rsa4k.rs  fetch_key.rs  gen_keys.rs  upexp.rs
src/: decrypt.rs  encrypt.rs  error.rs  key.rs  keyring.rs  lib.rs  network.rs  parse.rs  sign.rs  ssh.rs  types.rs  verify.rs
src/card/: connection.rs  crypto.rs  mod.rs  types.rs  upload.rs
src/internal/: helpers.rs  mod.rs  policy.rs
src/keystore/: mod.rs  schema.rs  store.rs
src/pgp/: crypto.rs  errors.rs  mod.rs  normalize_lines.rs  packet.rs  parsing_reader.rs  ser.rs  util.rs
src/pgp/adapter/: ecdsa.rs  mod.rs  rsa.rs
src/pgp/armor/: reader.rs  writer.rs
src/pgp/base64/: decoder.rs
src/pgp/composed/: any.rs  cleartext.rs  shared.rs  signature.rs  signed_key.rs
src/pgp/crypto/: aead.rs  dsa.rs  ecc_curve.rs  ecdh.rs  ecdsa.rs  ed25519.rs  ed448.rs  elgamal.rs  hash.rs  ml_dsa65_ed25519.rs  ml_dsa87_ed448.rs  ml_kem1024_x448.rs  ml_kem768_x25519.rs  rsa.rs  slh_dsa_shake128f.rs  slh_dsa_shake128s.rs  slh_dsa_shake256s.rs  sym.rs  x25519.rs  x448.rs
src/pgp/packet/: compressed_data.rs  gnupg_aead.rs  header.rs  literal_data.rs  many.rs  marker.rs  mod_detection_code.rs  one_pass_signature.rs  packet_sum.rs  padding.rs  public_key_encrypted_session_key.rs  public_key_parser.rs  secret_key_parser.rs  single.rs  sym_encrypted_data.rs  sym_encrypted_protected_data.rs  sym_key_encrypted_session_key.rs  trust.rs  user_attribute.rs  user_id.rs
tests/: card_reset_test.rs  card_tests.rs  fixture_tests.rs  integration_tests.rs  keystore_tests.rs
(+73 files in other folders)
